# kvlang

./: .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README_CN.md  ROADMAP.md  build.sh  cstyle_parse_test.go  go.mod  ir_test.go  kvlang_test.go  main.go  parse_kv_test.go  pyproject.toml  run.py  最高标准设计.md
.claude/: 测试验证清单.md
.claude/test/: run.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
article/: self-evolving-robot.md  transparent-execution.md
cmd/demo/: main.go
cmd/kvlang/: debug_agent.go  format.go  help.go  input.go  kvspace.go  layoutrwir.go  layoutrwirandrun.go  load.go  main.go  ps.go  run.go  runcode.go  serve.go  term.go  util.go  vet.go
cmd/loader/: main.go
cmd/vm/: main.go
doc/: LANGUAGE_SPEC.md
doc/kvlang/: README.md  control-flow-dependency.md  control-flow.md  grammar.bnf  spec-control-flow-v1.md
doc/其它agentlang参考/: zerolang分析.md
example/: run.py  最高标准设计.md
example/kvlang/: index.kv
extensions/kvlang/: language-configuration.json  package.json
internal/ast/: ast.go  astfile.go  dump.go  escape.go  format.go  最高标准设计.md
internal/cache/: cache.go
internal/codegen/: codegen.go
internal/device/: file.go  term.go  term_ws.go  ws.go
internal/ir/: compute.go  control.go  instruction.go  ir_test.go  lifecycle.go  opclass.go  pc.go  tensor.go
internal/keytree/: const.go  dev.go  entry.go  frame.go  member.go  notify.go  op.go  src.go  sys.go  todo.md  vthread.go  最高标准设计.md
tutorial/: README.md  agent_eval.py  error_test.py  test.py
(+563 files in other folders)
