[project]
name = "kvlang"
version = "0.1.0"
description = "KV-based declarative graph interpreter for Livebyte runtime"
requires-python = ">=3.10"
dependencies = ["redis>=5", "pyyaml>=6"]

[project.scripts]
kvlang = "kvlang.cli:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
